--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 script:
   - python docker_odoo_env/test_oe.py
   - coverage run docker_odoo_env/command_line.py
-  - flake8 docker_odoo_env/test_oe.py
+  #- flake8 docker_odoo_env/test_oe.py
 
 after_success:
   - codecov
