--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: python
-sudo: false
-cache: pip
 
 python:
   - "2.7"
@@ -11,15 +9,16 @@ python:
 git:
   depth: 1
 
-install:
-  - pip install codecov
-  - pip install flake8
+#install:
+#  - pip install codecov
+#  - pip install flake8
 
 script:
-  - python docker_odoo_env/test_oe.py
-  - coverage run docker_odoo_env/command_line.py
+  #- python docker_odoo_env/test_oe.py
+  #- coverage run docker_odoo_env/command_line.py
   #- flake8 docker_odoo_env/test_oe.py
+  pytest
 
-after_success:
-  - codecov
-  - coveralls
+#after_success:
+#  - codecov
+#  - coveralls
